@@ -68,7 +68,10 @@ CONFIG_UART_TXBUFSIZE=256
 # General build options
 #
 # CONFIG_RRLOAD_BINARY - make the rrload binary format used with
-#   BSPs from www.ridgerun.com
+#   BSPs from www.ridgerun.com using the tools/mkimage.sh script
+# CONFIG_INTELHEX_BINARY - make the Intel HEX binary format
+#   used with many different loaders using the GNU objcopy program
+#   Should not be selected if you are not using the GNU toolchain.
 # CONFIG_HAVE_LIBM - toolchain supports libm.a
 #
 # CONFIG_LINKER_START_AREA		- Start of START area
@@ -77,6 +80,7 @@ CONFIG_UART_TXBUFSIZE=256
 #   starting at 0000
 
 CONFIG_RRLOAD_BINARY=n
+CONFIG_INTELHEX_BINARY=n
 CONFIG_HAVE_LIBM=n
 
 CONFIG_LINKER_START_AREA=0x5200
